<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">



            <TextView
                android:text="Profile"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="Please add your information below"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:textSize="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayout_nama"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_nama"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:autofillHints=""
                        android:hint="Nama Lengkap"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:importantForAutofill="no"
                    android:id="@+id/textLayout_umur">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="Umur"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_umur"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jenis Kelamin"
                    android:layout_marginTop="16dp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radGroup"
                    >
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/rd_perempuan"
                        android:text="Perempuan"/>
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:id="@+id/rd_laki2"
                        android:text="Laki-laki"/>
                </RadioGroup>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayout_telp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_telp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:hint="No. telp / HP"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayout_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:hint="Alamat"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/btn_save"
                    android:text="ADD"/>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>



</FrameLayout>