<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerLogin.Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DAFTAR PENGGUNA"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_marginTop="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_rmRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="200dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_rmRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
       />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="280dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/signUp"
            android:layout_width="321dp"
            android:layout_height="50dp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginBottom="224dp"
            android:text="Daftar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/toLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sudah punya akun? Login disini!"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp"
            app:layout_constraintVertical_bias="0.073"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>